# raxb

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  release.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  publish.yaml
crates/raxb/: Cargo.toml
crates/raxb-axum/: Cargo.toml  README.md
crates/raxb-axum/src/: lib.rs
crates/raxb-derive/: Cargo.toml
crates/raxb-derive/src/: container.rs  lib.rs  symbol.rs  utils.rs
crates/raxb-derive/src/de/: attrs.rs  child.rs  mod.rs  text.rs  ty_enum.rs  ty_simple.rs  ty_struct.rs  utils.rs
crates/raxb-derive/src/ser/: attrs.rs  child.rs  mod.rs  text.rs  ty_enum.rs  ty_struct.rs
crates/raxb-derive/src/zde/: mod.rs  ty_struct.rs
crates/raxb-libxml2-sys/: Cargo.toml  bindings.h  build.rs
crates/raxb-validate/: Cargo.toml
crates/raxb-validate/src/: lib.rs
crates/raxb-xmlschema/: Cargo.toml
crates/raxb-xmlschema-build/: Cargo.toml
crates/raxb-xmlschema-build/src/: lib.rs
crates/raxb-xmlschema/src/: cnst.rs  lib.rs  reader.rs  writer.rs
crates/raxb/src/: de.rs  lib.rs  ser.rs  ty.rs  value.rs  zde.rs
crates/raxb/tests/: default_const_str.rs  default_field.rs  derive.rs  derive_borrow.rs  derive_enums.rs  derive_enums_ns.rs  derive_ns.rs  enums.rs  lib.rs  manual.rs  manual_borrow.rs  manual_ns.rs  tns_const.rs  trace_enabled.rs  trace_enabled_ns.rs
scripts/: build-dependencies.sh
