[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.4.4"
description = """
The Rust Architecture for XML Binding
"""
rust-version = "1.78.0"
authors = ["H & D GmbH Open Source <contact-oss@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/raxb"
categories = []
keywords = []

[workspace.dependencies]
raxb = { version = "0.4.2", path = "crates/raxb" }
raxb-libxml2-sys = { version = "0.4.2", path = "crates/raxb-libxml2-sys" }
raxb-derive = { version = "0.4.2", path = "crates/raxb-derive" }
raxb-validate = { version = "0.4.2", path = "crates/raxb-validate" }
raxb-xmlschema = { version = "0.4.2", path = "crates/raxb-xmlschema" }
raxb-xmlschema-build = { version = "0.4.2", path = "crates/raxb-xmlschema-build" }
raxb-axum = { version = "0.4.2", path = "crates/raxb-axum" }

anyhow = "1.0.90"
async-trait = "0.1.83"
byteorder = "1.5"
thiserror = "1.0.64"
url = "2.5.0"
uuid = { version = "1.11", features = ["v5"] }
lz4_flex = { version = "0.11" }
quick-xml = {version = "0.36.2", features = ["serialize", "encoding"]}
reqwest = { version = "0.12.8", features = ["blocking"] }
once_cell = "1.20.2"
libc = "^0.2"
tracing = "0.1.40"
test-log = "0.2.16"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
