[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.4.14"
description = """
The Rust Architecture for XML Binding
"""
rust-version = "1.84.0"
authors = ["H & D GmbH Open Source <contact-oss@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/raxb"
categories = []
keywords = []

[workspace.dependencies]
raxb = { version = "0.4.14", path = "crates/raxb" }
raxb-libxml2-sys = { version = "0.4.14", path = "crates/raxb-libxml2-sys" }
raxb-derive = { version = "0.4.14", path = "crates/raxb-derive" }
raxb-validate = { version = "0.4.14", path = "crates/raxb-validate" }
raxb-xmlschema = { version = "0.4.14", path = "crates/raxb-xmlschema" , default-features = false }
raxb-xmlschema-build = { version = "0.4.14", path = "crates/raxb-xmlschema-build" }
raxb-axum = { version = "0.4.14", path = "crates/raxb-axum" }

anyhow = { version = "1.0.89", default-features = false }
async-trait = "0.1.83"
byteorder = "1.5"
thiserror = "1.0.64"
url = { version = "2.5.0", default-features = false }
uuid = { version = "1.8", features = ["v5"], default-features = false }
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
quick-xml = "0.36.1"
reqwest = { version = "0.12.8", features = ["blocking"], default-features = false }
once_cell = { version = "1.20.1", default-features = false }
libc = { version = "0.2.159", default-features = false }
tracing = { version = "0.1.40", default-features = false }
test-log = { version = "0.2.16", default-features = false }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
