[package]
name = "raxb-derive"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
trace = []

[dependencies]
darling = { version = "0.20", default-features = false }
heck = "0.5"
syn = { version = "2", default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quick-xml.workspace = true
strum = { version = "0.26", features = ["derive"], default-features = false }
