[package]
name = "raxb-validate"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
raxb-libxml2-sys.workspace = true
raxb-xmlschema = { workspace = true, features = ["reader"] }
raxb.workspace = true
libc.workspace = true
once_cell = { workspace = true, features = ["std"] }
url.workspace = true
uuid.workspace = true
thiserror.workspace = true
byteorder.workspace = true
lz4_flex.workspace = true