[package]
name = "raxb-xmlschema-build"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
trace = []

[dependencies]
raxb.workspace = true
raxb-derive.workspace = true
raxb-xmlschema.workspace = true
thiserror.workspace = true
byteorder.workspace = true
