[package]
name = "raxb-xmlschema"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "reader",
    "writer",
]
reader = []
writer = ["reqwest"]

[dependencies]
reqwest = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true
thiserror.workspace = true
byteorder.workspace = true
lz4_flex.workspace = true