[package]
name = "raxb"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
trace = ["dep:tracing", "raxb-derive/trace"]

[dependencies]
raxb-derive.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
test-log = { workspace = true}
